# luau-gdextension

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: main.yml
addons/luau_gdextension/: luau.gdextension.uid
demo/: list_tests.gd  list_tests.gd.uid  main.gd  main.gd.uid  main.tscn  project.godot  run_single_test.gd  run_single_test.gd.uid  test_constant_access.gd  test_constant_access.gd.uid  test_loader.gd  test_loader.gd.uid  test_runner.gd  test_runner.gd.uid  test_runner.tscn  test_script.luau  test_script.luau.uid
demo/addons/luau_gdextension/: luau.gdextension
demo/addons/luau_gdextension_tests/: luau_tests.gdextension  luau_tests.gdextension.uid
demo/test/: test_boundary_checks_integration.gd  test_boundary_checks_integration.gd.uid  test_callable_integration.gd  test_callable_integration.gd.uid  test_callable_metamethods_integration.gd  test_callable_metamethods_integration.gd.uid  test_collections_integration.gd  test_collections_integration.gd.uid  test_godotlib_integration.gd  test_godotlib_integration.gd.uid  test_math_types_integration.gd  test_math_types_integration.gd.disabled  test_math_types_integration.gd.uid  test_metatables_integration.gd  test_metatables_integration.gd.uid  test_thread_integration.gd  test_thread_integration.gd.uid  test_togodot_debug.gd.uid  test_togodot_metamethod_integration.gd  test_togodot_metamethod_integration.gd.uid  test_userdata_tag_constant_integration.gd  test_userdata_tag_constant_integration.gd.uid  test_variants_integration.gd  test_variants_integration.gd.uid
doc_classes/: LuaCompileOptions.xml  LuaDebug.xml  LuaState.xml  Luau.xml  LuauGDExtensionTests.xml  LuauScript.xml  ResourceFormatLoaderLuauScript.xml  ResourceFormatSaverLuauScript.xml
src/: helpers.cpp  helpers.h  lua_callable.cpp  lua_callable.h  lua_compileoptions.cpp  lua_compileoptions.h  lua_debug.cpp  lua_debug.h  lua_godotlib.cpp  lua_godotlib.h  lua_math_types.cpp  lua_math_types.h  lua_state.cpp  lua_state.h  luau.cpp  luau.h  luau_gdextension_tests.cpp  luau_gdextension_tests.h  luau_script.cpp  luau_script.h  register_types.cpp  register_types.h  runtime_tests.cpp  runtime_tests.h  static_strings.cpp  static_strings.h  str_atom_cache.cpp  str_atom_cache.h  string_cache.cpp  string_cache.h  tests_runtime.cpp  weakly_bound_callable.cpp  weakly_bound_callable.h
src/bridging/: array.cpp  array.h  callable.cpp  callable.h  dictionary.cpp  dictionary.h  object.cpp  object.h  variant.cpp  variant.h
tests/: README.md  discover_tests.cmake  luau_gdextension_tests.cpp  luau_gdextension_tests.h  register_test_types.cpp  register_types.cpp  register_types.h  test_arrays.cpp  test_boundary_checks.cpp  test_bridging_array.cpp  test_bridging_callable.cpp  test_bridging_dictionary.cpp  test_bridging_object.cpp  test_bridging_variant.cpp  test_callable_stack.cpp  test_dictionaries.cpp  test_edge_cases.cpp  test_fixtures.h  test_godotlib.cpp  test_helpers.cpp  test_lua_compileoptions.cpp  test_lua_state_basic.cpp  test_lua_state_execution.cpp  test_lua_state_tables.cpp  test_lua_state_threads.cpp  test_luau.cpp  test_luau_script.cpp  test_main.cpp  test_math_types.cpp  test_runtime.cpp  test_state_management.cpp  test_string_cache.cpp  test_threads.cpp  test_variants.cpp
